Added images, created flashy class, and linked css to html

--- a/cupcakeShop.html
+++ b/cupcakeShop.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Cupcake Shop</title>
 </head>
 <body>
-   
-    
-    
+  <h1 class="flashy">Baby Cakes</h1> 
+  <h2>A Sweet Shop</h2>
+  <p>Founded in 2021, Baby Cakes is your one-stop shop for all things sweet. Specializing in cupcakes and other bitesize delicasies.</p>
+  <img src="cupcakeImages/storeFront.jpg">
+  <h3>Checkout some of our world renowned Baby Cakes:</h3>
+  <h4>Itty Bitty Cakes</h4>
+  <img src="cupcakeImages/tinyCakes.jpg">
+  <p></p>
+  <h3>Baby Cakes</h3>
+  <h4>Christmas Tree Cakes</h4>
+  <img src="cupcakeImages/xmasCakes.jpg">
+  <p></p>
+  <h4>Lion Cakes</h4>
+  <img src="cupcakeImages/lionCupcakes.jpg">
+  <p></p>
+  <h4>Cactus Cakes</h4>
+  <img src="cupcakeImages/succulentCakes.jpg">
+  <p></p>
+  <h4>Baby Cake Pops</h4>
+  <img src="cupcakeImages/cupcakePops.jpg">
+  <p></p>
 </body>
 </html>
