Added best sellers borders, rounded images
Co-authored-by: Morgan Bradford <morganjbradford95@gmail.com>

--- a/cupcakeShop.html
+++ b/cupcakeShop.html
@@ -9,22 +9,18 @@
   <h2>A Sweet Shop</h2>
   <p>Founded in 2021, Baby Cakes is your one-stop shop for all things sweet. Specializing in cupcakes and other bitesize delicasies.</p>
   <img src="cupcakeImages/storeFront.jpg">
-  <h3>Checkout some of our world renowned Baby Cakes:</h3>
-  <h4>Itty Bitty Cakes</h4>
-  <img src="cupcakeImages/tinyCakes.jpg">
-  <p></p>
-  <h3>Baby Cakes</h3>
-  <h4>Christmas Tree Cakes</h4>
+  <h2 class="flashy">Checkout some of our world renowned Baby Cakes:</h2>
+  <br>
+  <h3>Itty Bitty Baby Cakes</h3>
+  <img class="best" src="cupcakeImages/tinyCakes.jpg">
+  <h3>Christmas Tree Cakes</h3>
   <img src="cupcakeImages/xmasCakes.jpg">
-  <p></p>
-  <h4>Lion Cakes</h4>
+  <h3>Lion Cakes</h3>
   <img src="cupcakeImages/lionCupcakes.jpg">
-  <p></p>
-  <h4>Cactus Cakes</h4>
-  <img src="cupcakeImages/succulentCakes.jpg">
-  <p></p>
-  <h4>Baby Cake Pops</h4>
+  <h3>Cactus Cakes</h3>
+  <img class="best" src="cupcakeImages/succulentCakes.jpg">
+  <h3>Baby Cake Pops</h3>
   <img src="cupcakeImages/cupcakePops.jpg">
-  <p></p>
+  <h4>*Best Sellers*</h4>
 </body>
 </html>
