add README.md and license, change title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <title>Cupcake Shop</title>
+  <title>Baby Cakes</title>
 </head>
 <body>
   <h1 class="flashy">Baby Cakes</h1> 
